# casbin-sqlx-watcher

./: .env  .envrc  .gitignore  Cargo.toml  README.md  build.rs  devenv.nix
.github/workflows/: build.yaml
.sqlx/: query-00b5921c08ada328fe7fbd75c0b2757d9433c4baa761923c1f8aedc40379a920.json
src/: watcher.rs
src/fixtures/: base.sql
src/resources/: rbac_model.conf
